--- a/contracts/remote/Cargo.toml
+++ b/contracts/remote/Cargo.toml
@@ -30,10 +30,11 @@ optimize = """docker run --rm -v "$(pwd)":/code \
 
 [dependencies]
 cosmwasm-schema = "1.1.0"
-cosmwasm-std = "1.1.0"
+cosmwasm-std = { version = "1.1.0", features = ["stargate"] }
 cosmwasm-storage = "1.1.0"
 cw-storage-plus = "0.15.0"
 cw2 = "0.15.0"
+cw-utils = "0.15.0"
 schemars = "0.8"
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0" }
