--- a/contracts/swap/Cargo.toml
+++ b/contracts/swap/Cargo.toml
@@ -30,7 +30,7 @@ optimize = """docker run --rm -v "$(pwd)":/code \
 
 [dependencies]
 cosmwasm-schema = "1.1.0"
-cosmwasm-std = "1.1.0"
+cosmwasm-std = { version = "1.1.0", features = ["stargate"] }
 cosmwasm-storage = "1.1.0"
 cw-storage-plus = "0.15.0"
 cw2 = "0.15.0"
